# exam-prep-agent

./: .gitignore  Dockerfile  LOCAL_SETUP.md  PRODUCTION_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: exam_workflow.py  flashcard_agent.py  general_agent.py  graph.py  math_agent.py  mcq_agent.py  quiz_agent.py  supervisor_agent.py  syllabus_agent.py
app/auth/: jwt_handler.py
app/config/: production.py
app/middleware/: rate_limiter.py
app/models/: flashcard.py  mcq.py  quiz.py  quiz_attempt.py  syllabus.py  user.py
app/monitoring/: metrics.py
app/routes/: auth_routes.py  workflow_routes.py
app/tasks/: celery_app.py
app/templates/: exam.html
app/utils/: embeddings.py  logger.py  pdf_loader.py
chroma_db/: chroma.sqlite3
