[project]
name = "exam-prep-agent"
version = "0.1.0"
description = "AI-powered exam preparation system using LangGraph + FastAPI + Groq API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "langgraph>=0.2.39",
    "langchain>=0.3.7",
    "langchain-groq>=0.3.8",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.4",
    "pypdf2>=3.0.1",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "langsmith>=0.1.0",
]
